--- a/src/assets/styles/ShoppingCart.scss
+++ b/src/assets/styles/ShoppingCart.scss
@@ -1,15 +1,10 @@
-// متغیرهای استایل
-$primary-color: #0d6efd;
-$primary-hover: #0b5ed7;
-$border-color: #ddd;
-$text-color: #333;
-$price-color: #666;
-$background-color: #f8f9fa;
+@import "variables";
+@import "global.scss";
 
 // صفحه کلی
 .shopping-cart {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 3rem auto; // اضافه کردن فاصله از بالا (2rem)
   padding: 2rem;
   background-color: $background-color;
   border-radius: 8px;
@@ -96,32 +91,6 @@ $background-color: #f8f9fa;
   }
 }
 
-.quantity-controls {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-
-  .quantity-btn {
-    background-color: #0d6efd;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    font-size: 1rem;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-
-    &:hover {
-      background-color: #0056b3;
-    }
-  }
-
-  .quantity {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #333;
-  }
-}
 
 .remove-btn {
   background-color: red;
