--- a/src/assets/styles/Product.scss
+++ b/src/assets/styles/Product.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "global.scss";
 
-// 2. استایل‌های صفحه
+
 .page-title {
   text-align: center;
   font-size: $font-size-title;
@@ -9,7 +9,7 @@
   color: $page-title-color;
 }
 
-// 3. گرید محصولات
+
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -18,11 +18,11 @@
   max-width: $grid-max-width;
   margin: 0 auto;
 
-  // کارت هر محصول
+
   .product-card {
     background: #fff;
     border: 1px solid $product-border-color;
-    border-radius: 8px;
+    border-radius: $border-radius-card;
     overflow: hidden;
     box-shadow: 0 4px 6px $product-card-shadow;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -32,19 +32,18 @@
       box-shadow: 0 8px 12px $product-card-hover-shadow;
     }
 
-    // تصویر محصول
+
     .product-image {
       width: 100%;
       height: 150px;
       object-fit: scale-down;
     }
 
-    // اطلاعات محصول
     .product-info {
       padding: 1rem;
       text-align: center;
       .product-title {
-        font-size: 1.2rem;
+        font-size: $font-size-base;
         font-weight: bold;
         margin: 0.5rem 0;
         color: $product-title-color;
@@ -53,23 +52,22 @@
         white-space: nowrap;
       }
 
+
       .product-price {
         font-size: 1rem;
         color: $product-price-color;
         margin-bottom: 0.5rem;
       }
 
-      // دکمه افزودن به سبد خرید
       .add-to-cart-btn {
         @extend .btn;
         background: $btn-bg-color;
         color: #fff;
         padding: 0.5rem 1rem;
         border: none;
-        border-radius: 4px;
+        border-radius: $border-radius-btn;
         cursor: pointer;
         transition: background 0.2s ease;
-
         &:hover {
           background: $btn-hover-bg-color;
         }
@@ -77,5 +75,3 @@
     }
   }
 }
-
-
