--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,5 @@
 @import "variables";
 
-// ریست و استایل‌های عمومی
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -51,9 +50,47 @@ body {
     }
   
     .quantity {
-      font-size: 1rem;
+      font-size: $font-size-base;
       font-weight: bold;
       color: #333;
     }
   }
+
+  .message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem 2rem; 
+    border: 1px solid #f5c6cb; 
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    max-width: 90%;
+    margin: 1rem auto; 
+    font-size: $font-size-base;
+    line-height: 1.5; 
+    &.error {
+      color: $text-color-error-message; 
+      background-color: $background-color-error-message; 
+      border: 1px solid #f5c6cb;
+    }
+    &.success {
+      color: $text-color-success-message;
+      background-color: $background-color-success-message;
+      border: 1px solid #c3e6cb;
+    }
+  
+    &.warning {
+      color: $text-color-warning-message;
+      background-color: $background-color-warning-message;
+      border: 1px solid #ffeeba;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .error-message {
+      max-width: 600px;
+    }
+  }
+  
   
