--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "global.scss";
 
 .header {
   background-color: $header-bg;
@@ -54,4 +55,8 @@
   i {
     font-size: 1.2rem;
   }
+}
+.language-switcher {
+  display: flex;
+  gap: 10px;
 }
