--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,6 +4,14 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
+    &.rtl {
+      direction: rtl;
+      text-align: right;
+    }
+    &.ltr {
+      direction: ltr;
+      text-align: left;
+    }
   }
   
   .page-title {
